# fermisurfer

./: .gitignore  Android1.sln  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  fermisurfer.rc  fermisurfer.vcxproj  fermisurfer_web.vcxproj  manual_en.tex  manual_ja.tex  readme.md  resource.h
Android1.NativeActivity/: Android1.NativeActivity.vcxproj  Android1.NativeActivity.vcxproj.filters  android_native_app_glue.c  android_native_app_glue.h  basic_math.cpp  basic_math.hpp  bz_lines.cpp  bz_lines.hpp  calc_nodeline.cpp  calc_nodeline.hpp  draw.cpp  draw.hpp  equator.cpp  fermi_patch.cpp  free_patch.cpp  free_patch.hpp  initialize.cpp  kumo.cpp  main.cpp  menu.cpp  menu.hpp  read_file.cpp  read_file.hpp  section.cpp  variable.hpp
Android1.Packaging/: Android1.Packaging.androidproj  AndroidManifest.xml  FermiSurfer.androidproj  build.xml
Android1.Packaging/res/values/: strings.xml
doc/: Doxyfile  fermisurfer.doxygen  index.html  index.html.en  index.html.ja  manual_en.html  manual_en.tex  manual_ja.html  manual_ja.tex  manual_left_en.html  manual_left_ja.html  manual_right_en.html  manual_right_ja.html
doc/en/: ack.rst  conf.py  fermisf_contact_en.rst  fermisf_copy_en.rst  fermisf_file_en.rst  fermisf_gallery_en.rst  fermisf_input_en.rst  fermisf_install_en.rst  fermisf_ops_en.rst  fermisf_overview_en.rst  fermisf_qe_en.rst  file.rst  index.rst  input.rst  install.rst  ops.rst  qe.rst
doc/figs/: background.eps  background.odg  band.eps  band.odg  brillouinzone.eps  brillouinzone.odg  colorbar.eps  colorbar.odg  colorscale.eps  colorscale.odg  fermisurfer.icns  iro2.eps  iro2.odg  nodeline.eps  nodeline.odg  shift.eps  shift.odg  start.eps  start.odg  stereogram.eps  stereogram.odg
doc/ja/: Makefile  batch.rst  conf.py  fermisf_copy_ja.rst  fermisf_file_ja.rst  fermisf_gallery_ja.rst  fermisf_input_ja.rst  fermisf_install_ja.rst  fermisf_ops_ja.rst  fermisf_overview_ja.rst  fermisf_qe_ja.rst  index.rst  input.rst  install.rst  onweb.rst  ops.rst
doc/qe/: proj.in
docs/: developer.md  fermisurfer.doxygen  index.html  index.html.ja  index_ja.html
docs/en/: batch.rst  conf.py  contact.rst  copy.rst  index.rst  input.rst  onweb.rst
docs/en/_build/doctrees/: ack.doctree  android.doctree  batch.doctree  contact.doctree  copy.doctree  environment.pickle  file.doctree  index.doctree  input.doctree  install.doctree  onweb.doctree  ops.doctree  overview.doctree  qe.doctree
docs/en/_build/html/: .buildinfo  ack.html  android.html  batch.html  contact.html  copy.html  file.html  genindex.html  index.html  input.html  install.html  objects.inv  onweb.html  ops.html  overview.html  qe.html  search.html  searchindex.js
docs/en/_build/latex/: fermisurfer.aux  fermisurfer.fdb_latexmk  fermisurfer.fls  fermisurfer.ilg  fermisurfer.out  fermisurfer.tex  fermisurfer.toc
docs/html/: annotated.html  basic__math_8cpp.html  basic__math_8cpp__incl.dot  basic__math_8cpp_a77b0fa2c247c0a993f982a59b423ce62_icgraph.dot  basic__math_8cpp_source.html  basic__math_8hpp.html  basic__math_8hpp__dep__incl.dot  basic__math_8hpp_a131305646374d96dd058812729d59d07_icgraph.dot  basic__math_8hpp_a9d3683294ca31a578ccbb2e371ef0676_icgraph.dot  basic__math_8hpp_ae3f623df79bd4c9f9753cb1a94bf9c59_icgraph.dot  basic__math_8hpp_source.html  bz__lines_8cpp.html  bz__lines_8cpp__incl.dot  bz__lines_8cpp_a30b2de971f8282423e6030f6ba1d6edc_icgraph.dot  bz__lines_8cpp_ab93ff778d34639b0e5638946b2ec9a6b_cgraph.dot  bz__lines_8cpp_ab93ff778d34639b0e5638946b2ec9a6b_icgraph.dot  bz__lines_8cpp_afa51307a795d2a0befab00d3b0f780d7_icgraph.dot  bz__lines_8cpp_source.html  bz__lines_8hpp.html  bz__lines_8hpp__dep__incl.dot  bz__lines_8hpp_a30b2de971f8282423e6030f6ba1d6edc_cgraph.dot  bz__lines_8hpp_source.html  calc__nodeline_8cpp.html  calc__nodeline_8cpp__incl.dot  calc__nodeline_8cpp_ab1cb3507c64f260c9af13ebc05d00fae_icgraph.dot  calc__nodeline_8cpp_source.html  calc__nodeline_8hpp.html  calc__nodeline_8hpp__dep__incl.dot  calc__nodeline_8hpp_ab1cb3507c64f260c9af13ebc05d00fae_cgraph.dot  calc__nodeline_8hpp_source.html  class_my_app-members.html  class_my_app.html  class_my_app__coll__graph.dot  class_my_app_a79fa75d1155f0e85e20f2869538296d6_cgraph.dot  class_my_frame-members.html  class_my_frame.html  class_my_frame__coll__graph.dot  class_my_frame__inherit__graph.dot  class_my_frame_a120163772e0022f3ed46309c9e427357_cgraph.dot  class_my_frame_a2027d2a536a0d9b574134dff9d89959e_cgraph.dot  (+175 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  functions_0.js  functions_1.js  functions_10.js  (+36 more)
docs/ja/: android.rst  batch.rst  conf.py  contact.rst  index.rst  input.rst  onweb.rst  ops.rst
docs/ja/_build/doctrees/: ack.doctree  android.doctree  batch.doctree  contact.doctree  copy.doctree  environment.pickle  file.doctree  index.doctree  input.doctree  install.doctree  onweb.doctree  ops.doctree  overview.doctree  qe.doctree
docs/ja/_build/html/: .buildinfo  ack.html  android.html  batch.html  contact.html  (+13 more)
docs/qe/: scf.in
examples/: frmsf.in  pb.bxsf  pb_vf3D.frmsf  srvo3_orb.frmsf
javascript/: fermisurfer.html  fermisurfer.js  frmsf2js.sh  index.php
src/: Makefile  Makefile-mac  Makefile.am  Makefile.in  basic_math.c  basic_math.cpp  basic_math.h  basic_math.hpp  bxsf2frmsf.c  bxsf2frmsf.cpp  bz_lines.c  bz_lines.cpp  bz_lines.hpp  calc_nodeline.c  calc_nodeline.cpp  calc_nodeline.hpp  draw.c  draw.cpp  draw.h  draw.hpp  equator.c  equator.cpp  equator.hpp  fermi_patch.c  fermi_patch.cpp  fermi_patch.hpp  fermisurfer.c  fermisurfer.cpp  fermisurfer.xpm  free_patch.c  free_patch.cpp  free_patch.h  free_patch.hpp  initialize.c  initialize.cpp  initialize.h  initialize.hpp  kumo.c  kumo.cpp  kumo.hpp  (+21 more)
(+22 files in other folders)
