MAINTAINERCLEANFILES = Makefile.in

bin_PROGRAMS = fermisurfer bxsf2frmsf

fermisurfer_SOURCES = basic_math.c bz_lines.c calc_nodeline.c draw.c \
                      fermi_patch.c fermisurfer.c free_patch.c initialize.c kumo.c \
                      menu.c operation.c read_file.c section.c 

bxsf2frmsf_SOURCES = bxsf2frmsf.c
