MAINTAINERCLEANFILES = Makefile.in

bin_PROGRAMS = fermisurfer bxsf2frmsf

fermisurfer_SOURCES = basic_math.c bz_lines.c calc_nodeline.c draw.c \
                      fermi_patch.c fermisurfer.c free_patch.c initialize.c kumo.c \
                      menu.c operation.c read_file.c section.c \
                      basic_math.h bz_lines.h calc_nodeline.h draw.h fermi_patch.h \
                      free_patch.h initialize.h kumo.h menu.h operation.h \
                      read_file.h section.h variable.h 

bxsf2frmsf_SOURCES = bxsf2frmsf.c
