MAINTAINERCLEANFILES = Makefile.in

bin_PROGRAMS = fermisurfer

fermisurfer_SOURCES = basic_math.cpp bz_lines.cpp calc_nodeline.cpp draw.cpp equator.cpp \
                      fermi_patch.cpp fermisurfer.cpp free_patch.cpp initialize.cpp kumo.cpp \
                      menu.cpp operation.cpp read_file.cpp section.cpp \
                      basic_math.hpp bz_lines.hpp calc_nodeline.hpp draw.hpp fermi_patch.hpp \
                      free_patch.hpp initialize.hpp kumo.hpp menu.hpp operation.hpp \
                      read_file.hpp section.hpp variable.hpp equator.hpp fermisurfer.xpm
